Changed the static css to fix bugs on iPhone 3 viewport

--- a/django/static/site/css/home/static_max_320.css
+++ b/django/static/site/css/home/static_max_320.css
@@ -37,9 +37,9 @@ html, body { width: 100%; height: 100%;  font-family: "Open Sans", sans-serif; f
 	.bt-purple { color:#ffffff; text-shadow: 0px -1px 1px rgba(0,0,0,0.4); background: #915bbb; box-shadow: 1px 2px 2px #8c5ab4; }
 	.bt-green { color:#ffffff; text-shadow: 0px -1px 1px rgba(0,0,0,0.4); background: #12a47b; }
 	.bt-blue { color:#ffffff; text-shadow: 0px -1px 1px rgba(0,0,0,0.4); background: #4575b8; }
-	.bt-more { position: absolute; left:50%; bottom: 2%; display: block; width: 5em; height: 5em; margin-left: -2.5em; background: url(../../img/bt_more.png) no-repeat; background-size: cover; }
-	.bt-more.page1 { background-position-y: -5.2em; }
-	.bt-more.page3 { background-position-y: -10.4em; }
+	.bt-more { position: absolute; left:50%; bottom: 2%; display: block; width: 3em; height: 3em; margin-left: -1.5em; background: url(../../img/bt_more.png) no-repeat; background-size: cover; }
+	.bt-more.page1 { background-position-y: -3.2em; }
+	.bt-more.page3 { background-position-y: -6.3em; }
 
 
 
@@ -50,18 +50,18 @@ html, body { width: 100%; height: 100%;  font-family: "Open Sans", sans-serif; f
 	#page1-title { position: relative; width: 90%; text-align: center; margin-top: 28%; margin-left: 5%; text-shadow: 3px 3px 4px rgba(0,0,0,0.5); line-height: 1em; font-size: 3em !important; }
 	#page1-subtitle { position: relative; width: 74%; text-align: center; margin-left: 13%; margin-top: 4%; text-shadow: 3px 3px 4px rgba(0,0,0,0.5); font-size: 1.6em; }
 	.page1-overlay { width:100%; height:100%; background: url( "../../img/diagonal_overlay.png" ) repeat; }
-	#p1-signup { position: relative; width: 70%; margin: 10% 0 0 15%; padding: 0.6em 0; }
+	#p1-signup { position: relative; width: 70%; margin: 6% 0 0 15%; padding: 0.6em 0; }
 
 
 
 
 	/** Page 2 elements */
 	#page2 { position:relative; width: 100%; height: 100%; background: url( "../../img/bg2_500.png" ) no-repeat; background-size: cover; background-position: 80%; }
-	#l1h { position: absolute; text-align: right; width: 58%; top: 13%; font-size: 1.5em; right: 15%; }	
+	#l1h { position: absolute; text-align: right; width: 58%; top: 13%; font-size: 1.3em; right: 15%; }	
 	#l1h > span { color: black; }
-	#r1ul { position: absolute; right: 5%; list-style-type: none; width: 50%; top: 30%; font-size: 1.2em; }
+	#r1ul { position: absolute; right: 5%; list-style-type: none; width: 50%; top: 27%; font-size: 1.1em; }
 	#r1ul > li { background-image: url( "../../img/bullet-wanna.png"); background-size: auto 1.667em; background-repeat: no-repeat; background-position: 0 0.6em; padding-left: 1.667em; }
-	#r1ul > li:last-child { margin-top: 15%; }
+	#r1ul > li:last-child { margin-top: 5%; }
 	#r1ul > li > span { font-size: 1.3em; }
 	#r1-signup { position: absolute; right: 10%; top: 78%; font-size: 1.2em; }
 
@@ -81,11 +81,11 @@ html, body { width: 100%; height: 100%;  font-family: "Open Sans", sans-serif; f
 	.feature { width: 60%; height: 100%; }
 	.feature.left { position: relative; margin-left: 0; text-align: right; }
 	.feature.right { position: relative; margin-left: 40%; text-align: left; }
-	.feature.full { position: relative; width: 100%; height: 100%; text-align: center; padding-top:16%;  font-size: 1.2em;  }
-	.feature-text { width: 50%; text-align: right; display: inline-block; vertical-align: middle; margin-top: -1.7em; font-size: 0.6em; }
-	.feature-icon { position: relative; width: 5.5em; height: 5.5em; display: inline-block; vertical-align: middle; margin-top: -0.3em; }
-	.feature.left > .feature-icon { margin-right: -2.7em; }
-	.feature.right > .feature-icon { margin-left: -2.7em; }
+	.feature.full { position: relative; width: 100%; height: 100%; text-align: center; padding-top:16%;  font-size: 1em;  }
+	.feature-text { width: 60%; text-align: right; display: inline-block; vertical-align: middle; margin-top: -0.5em; font-size: 0.6em; }
+	.feature-icon { position: relative; width: 3.5em; height: 3.5em; display: inline-block; vertical-align: middle; margin-top: -0.3em; }
+	.feature.left > .feature-icon { margin-right: -1.7em; }
+	.feature.right > .feature-icon { margin-left: -1.7em; }
 	#feature0-icon { background: url(../../img/feature0_icon.png) no-repeat center center; background-size: cover; }
 	#feature1-icon { background: url(../../img/feature1_icon.png) no-repeat center center; background-size: cover; }
 	#feature2-icon { background: url(../../img/feature2_icon.png) no-repeat center center; background-size: cover; }
@@ -121,10 +121,10 @@ html, body { width: 100%; height: 100%;  font-family: "Open Sans", sans-serif; f
 	/** Page 5 elements */
 	#page5 { position:relative; width: 100%; height: 78%; background: url( "../../img/bg5_500.png" ) no-repeat; background-size: cover; background-position: center; }
 	.half-width { position: relative; width: 50%; height: 100%; float:left;}
-	#l4-msg { position: absolute; top: 40%; text-align: center; font-size: 2.5em; }
-	#r4-title { position: relative; margin-top:25%; text-align: center; font-size: 2.2em; }
-	#r4-subtitle { position: relative;  text-align: center; margin-top:5%; font-size: 1.2em; }
-	#r4-signup { position: relative; width: 106%; padding: 0.6em 0; margin-top: 55%; margin-left: -53%; font-size: 1.2em; }
+	#l4-msg { position: absolute; top: 35%; text-align: center; font-size: 2.5em; }
+	#r4-title { position: relative; margin-top:25%; text-align: center; font-size: 1.5em; }
+	#r4-subtitle { position: relative;  text-align: center; margin-top:5%; font-size: 1em; }
+	#r4-signup { position: relative; width: 86%; padding: 0.6em 0; margin-top: 20%; margin-left: 7%; font-size: 1.2em; }
 	.p4-wrapper { width: 80%; left: 10%; text-align: center; }
 
 
@@ -137,15 +137,15 @@ html, body { width: 100%; height: 100%;  font-family: "Open Sans", sans-serif; f
 	#social { position:relative; left: 50%; margin-left: -6em; width: 12em; height: 2.7em; margin-top: -2em; }
 	.social-button { display: inline-block; background-color: #ffde00; border-radius: 46px; width: 2.7em; height: 2.7em; margin-right: 0.2em; line-height: 2.7em; box-shadow: 0px 3px 0px #ce9600; text-align: center; color: #4d1f6c; }
 	.social-button:last-child{ margin-right: 0; }
-	#backers-separator { display: block; margin-bottom: 1em; position: relative; text-align: center; width: 60%; z-index: 1; margin: 10% 0 0 20%; }
+	#backers-separator { display: block; margin-bottom: 1em; position: relative; text-align: center; width: 60%; z-index: 1; margin: 10% 0 0 20%; font-size:0.8em;}
 	#backers-separator:before { width: 38%; height: 10px; background-color: #ffffff; content: ''; margin: -5px 0 0 -19%; left: 50%; position: absolute; top: 50%; z-index: -1; }
 	#backers-separator:after { border-bottom: 1px solid #dfe0e6; content: ''; display: block; position: absolute; top: 49%; width: 100%; z-index: -2; }
 	#backers-container{ position: relative;margin-top: 4%; width: 100%; }
 	.backer { float: left; display: block; margin-right: 0.5em; }
 	.backer:last-child{ margin-right: 0; }
-	#fapema { width:5em; height:2em; background: url(../../img/logo_fapema.png) no-repeat center center; background-size: contain; }
-	#startupchile { width:8em; height:3em; background: url(../../img/logo_startupchile.png) no-repeat center -10px; background-size: contain; }
-	#finep {  width:5em; height:2em; background: url(../../img/logo_finep.png) no-repeat center center; background-size: contain; margin-left:40%;}
+	#fapema { width:3em; height:1em; background: url(../../img/logo_fapema.png) no-repeat center center; background-size: contain; margin-left: 12%; }
+	#startupchile { width:5em; height:3em; background: url(../../img/logo_startupchile.png) no-repeat center -10px; background-size: contain; }
+	#finep {  width:3em; height:1em; background: url(../../img/logo_finep.png) no-repeat center center; background-size: contain; }
 
 
 
